# sl-demo

./: .gitignore  README.md  digital_signals.yaml  pyproject.toml
examples/: demo_analyse.py  load_and_analyse.py  test.py
src/sl_demo/: __init__.py  analyser.py  main.py  sl_demo.py  valid_pares_.py
