[project]
name = "sl-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rustam Akhmadullin", email = "ru.akhmadullin@yadro.com" }
]
requires-python = ">=3.12"
dependencies = [
    "logic2-automation>=1.0.7",
    "loguru>=0.7.3",
    "protobuf==5.29.0",
]

[project.scripts]
serial-capture = "sl_demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
